--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "vite": "^5.0.3",
     "wrangler": "^3.51.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
+  }
 }
